AP-20526: move more classes into API
Also moves the complete authentication process into the LoginAuthenticator

AP-20526 (Box Authenticator)